Correction z-index footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1613,7 +1613,7 @@ footer {
   width: 100%;
   background-color: var(--arrierePlan);
   box-shadow: 0px 0px 4px var(--ombrePrincipal);
-  z-index: 1;
+  z-index: 4;
   bottom: 0px;
 }
 
